// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildCcsLogsExtractionEsqlQuery generates expected query for host entity type 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM remote:metrics-*
    METADATA _index, _id
  | WHERE
      @timestamp >= TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
      AND (NOT(\`host.id\` IS NULL) AND COALESCE(\`host.id\` != \\"\\", TRUE) OR NOT(\`host.name\` IS NULL) AND COALESCE(\`host.name\` != \\"\\", TRUE) OR NOT(\`host.hostname\` IS NULL) AND COALESCE(\`host.hostname\` != \\"\\", TRUE))
| EVAL _src_entity_source0 = MV_FIRST(event.module),
 _src_entity_source1 = MV_FIRST(event.dataset),
 _src_entity_source2 = MV_FIRST(data_stream.dataset),
 _src_entity_source = CASE((_src_entity_source0 IS NOT NULL AND _src_entity_source0 != \\"\\"), _src_entity_source0, (_src_entity_source1 IS NOT NULL AND _src_entity_source1 != \\"\\"), _src_entity_source1, (_src_entity_source2 IS NOT NULL AND _src_entity_source2 != \\"\\"), _src_entity_source2, NULL),
 entity.source = CASE((_src_entity_source IS NULL OR _src_entity_source == \\"\\"), NULL, _src_entity_source)
| EVAL entity.id = CONCAT(\\"host:\\", CASE((host.id IS NOT NULL AND host.id != \\"\\"), host.id,
(host.name IS NOT NULL AND host.name != \\"\\"), host.name,
(host.hostname IS NOT NULL AND host.hostname != \\"\\"), host.hostname, NULL))
| STATS
    @timestamp = MAX(@timestamp),
    entity.EngineMetadata.FirstSeenLogInPage = MIN(@timestamp),
    entity.name = LAST(TO_STRING(host.name), @timestamp) WHERE TO_STRING(host.name) IS NOT NULL,
 host.entity.id = FIRST(TO_STRING(host.entity.id), @timestamp) WHERE TO_STRING(host.entity.id) IS NOT NULL,
 host.name = MV_DEDUPE(TOP(TO_STRING(host.name), 10)) WHERE TO_STRING(host.name) IS NOT NULL,
 host.domain = MV_DEDUPE(TOP(TO_STRING(host.domain), 10)) WHERE TO_STRING(host.domain) IS NOT NULL,
 host.hostname = MV_DEDUPE(TOP(TO_STRING(host.hostname), 10)) WHERE TO_STRING(host.hostname) IS NOT NULL,
 host.id = MV_DEDUPE(TOP(TO_STRING(host.id), 10)) WHERE TO_STRING(host.id) IS NOT NULL,
 host.os.name = MV_DEDUPE(TOP(TO_STRING(host.os.name), 10)) WHERE TO_STRING(host.os.name) IS NOT NULL,
 host.os.type = MV_DEDUPE(TOP(TO_STRING(host.os.type), 10)) WHERE TO_STRING(host.os.type) IS NOT NULL,
 host.ip = MV_DEDUPE(TOP(TO_IP(host.ip), 10)) WHERE TO_IP(host.ip) IS NOT NULL,
 host.mac = MV_DEDUPE(TOP(TO_STRING(host.mac), 10)) WHERE TO_STRING(host.mac) IS NOT NULL,
 host.type = MV_DEDUPE(TOP(TO_STRING(host.type), 10)) WHERE TO_STRING(host.type) IS NOT NULL,
 host.architecture = MV_DEDUPE(TOP(TO_STRING(host.architecture), 10)) WHERE TO_STRING(host.architecture) IS NOT NULL,
 host.boot.id = LAST(TO_STRING(host.boot.id), @timestamp) WHERE TO_STRING(host.boot.id) IS NOT NULL,
 host.cpu.usage = LAST(host.cpu.usage, @timestamp) WHERE host.cpu.usage IS NOT NULL,
 host.disk.read.bytes = LAST(TO_LONG(host.disk.read.bytes), @timestamp) WHERE TO_LONG(host.disk.read.bytes) IS NOT NULL,
 host.disk.write.bytes = LAST(TO_LONG(host.disk.write.bytes), @timestamp) WHERE TO_LONG(host.disk.write.bytes) IS NOT NULL,
 host.network.egress.bytes = LAST(TO_LONG(host.network.egress.bytes), @timestamp) WHERE TO_LONG(host.network.egress.bytes) IS NOT NULL,
 host.network.egress.packets = LAST(TO_LONG(host.network.egress.packets), @timestamp) WHERE TO_LONG(host.network.egress.packets) IS NOT NULL,
 host.network.ingress.bytes = LAST(TO_LONG(host.network.ingress.bytes), @timestamp) WHERE TO_LONG(host.network.ingress.bytes) IS NOT NULL,
 host.network.ingress.packets = LAST(TO_LONG(host.network.ingress.packets), @timestamp) WHERE TO_LONG(host.network.ingress.packets) IS NOT NULL,
 host.uptime = LAST(TO_LONG(host.uptime), @timestamp) WHERE TO_LONG(host.uptime) IS NOT NULL,
 host.pid_ns_ino = LAST(TO_STRING(host.pid_ns_ino), @timestamp) WHERE TO_STRING(host.pid_ns_ino) IS NOT NULL,
 host.os.family = LAST(TO_STRING(host.os.family), @timestamp) WHERE TO_STRING(host.os.family) IS NOT NULL,
 host.os.full = LAST(TO_STRING(host.os.full), @timestamp) WHERE TO_STRING(host.os.full) IS NOT NULL,
 host.os.kernel = LAST(TO_STRING(host.os.kernel), @timestamp) WHERE TO_STRING(host.os.kernel) IS NOT NULL,
 host.os.platform = LAST(TO_STRING(host.os.platform), @timestamp) WHERE TO_STRING(host.os.platform) IS NOT NULL,
 host.os.version = LAST(TO_STRING(host.os.version), @timestamp) WHERE TO_STRING(host.os.version) IS NOT NULL,
 host.geo.city_name = LAST(TO_STRING(host.geo.city_name), @timestamp) WHERE TO_STRING(host.geo.city_name) IS NOT NULL,
 host.geo.continent_code = LAST(TO_STRING(host.geo.continent_code), @timestamp) WHERE TO_STRING(host.geo.continent_code) IS NOT NULL,
 host.geo.continent_name = LAST(TO_STRING(host.geo.continent_name), @timestamp) WHERE TO_STRING(host.geo.continent_name) IS NOT NULL,
 host.geo.country_iso_code = LAST(TO_STRING(host.geo.country_iso_code), @timestamp) WHERE TO_STRING(host.geo.country_iso_code) IS NOT NULL,
 host.geo.country_name = LAST(TO_STRING(host.geo.country_name), @timestamp) WHERE TO_STRING(host.geo.country_name) IS NOT NULL,
 host.geo.name = MV_DEDUPE(TOP(TO_STRING(host.geo.name), 10)) WHERE TO_STRING(host.geo.name) IS NOT NULL,
 host.geo.postal_code = MV_DEDUPE(TOP(TO_STRING(host.geo.postal_code), 10)) WHERE TO_STRING(host.geo.postal_code) IS NOT NULL,
 host.geo.region_iso_code = MV_DEDUPE(TOP(TO_STRING(host.geo.region_iso_code), 10)) WHERE TO_STRING(host.geo.region_iso_code) IS NOT NULL,
 host.geo.region_name = MV_DEDUPE(TOP(TO_STRING(host.geo.region_name), 10)) WHERE TO_STRING(host.geo.region_name) IS NOT NULL,
 host.geo.timezone = MV_DEDUPE(TOP(TO_STRING(host.geo.timezone), 10)) WHERE TO_STRING(host.geo.timezone) IS NOT NULL,
 cloud.provider = LAST(TO_STRING(cloud.provider), @timestamp) WHERE TO_STRING(cloud.provider) IS NOT NULL,
 cloud.region = LAST(TO_STRING(cloud.region), @timestamp) WHERE TO_STRING(cloud.region) IS NOT NULL,
 cloud.instance.id = LAST(TO_STRING(cloud.instance.id), @timestamp) WHERE TO_STRING(cloud.instance.id) IS NOT NULL,
 cloud.machine.type = LAST(TO_STRING(cloud.machine.type), @timestamp) WHERE TO_STRING(cloud.machine.type) IS NOT NULL,
 agent.id = LAST(TO_STRING(agent.id), @timestamp) WHERE TO_STRING(agent.id) IS NOT NULL,
 agent.type = LAST(TO_STRING(agent.type), @timestamp) WHERE TO_STRING(agent.type) IS NOT NULL,
 endpoint.id = LAST(TO_STRING(endpoint.id), @timestamp) WHERE TO_STRING(endpoint.id) IS NOT NULL,
 asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE TO_STRING(asset.id) IS NOT NULL,
 asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE TO_STRING(asset.name) IS NOT NULL,
 asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE TO_STRING(asset.owner) IS NOT NULL,
 asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE TO_STRING(asset.serial_number) IS NOT NULL,
 asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE TO_STRING(asset.model) IS NOT NULL,
 asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE TO_STRING(asset.vendor) IS NOT NULL,
 asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE TO_STRING(asset.environment) IS NOT NULL,
 asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE TO_STRING(asset.criticality) IS NOT NULL,
 asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE TO_STRING(asset.business_unit) IS NOT NULL,
 entity.risk.calculated_level = LAST(TO_STRING(host.risk.calculated_level), @timestamp) WHERE TO_STRING(host.risk.calculated_level) IS NOT NULL,
 entity.risk.calculated_score = LAST(TO_DOUBLE(host.risk.calculated_score), @timestamp) WHERE TO_DOUBLE(host.risk.calculated_score) IS NOT NULL,
 entity.risk.calculated_score_norm = LAST(TO_DOUBLE(host.risk.calculated_score_norm), @timestamp) WHERE TO_DOUBLE(host.risk.calculated_score_norm) IS NOT NULL,
 event.module = MV_DEDUPE(TOP(TO_STRING(event.module), 10)) WHERE TO_STRING(event.module) IS NOT NULL,
 event.dataset = MV_DEDUPE(TOP(TO_STRING(event.dataset), 10)) WHERE TO_STRING(event.dataset) IS NOT NULL,
 data_stream.dataset = MV_DEDUPE(TOP(TO_STRING(data_stream.dataset), 50)) WHERE TO_STRING(data_stream.dataset) IS NOT NULL,
 entity.source = MV_DEDUPE(TOP(TO_STRING(entity.source), 50)) WHERE TO_STRING(entity.source) IS NOT NULL,
 entity.type = LAST(TO_STRING(host.entity.type), @timestamp) WHERE TO_STRING(host.entity.type) IS NOT NULL,
 entity.sub_type = LAST(TO_STRING(host.entity.sub_type), @timestamp) WHERE TO_STRING(host.entity.sub_type) IS NOT NULL,
 entity.url = LAST(TO_STRING(host.entity.url), @timestamp) WHERE TO_STRING(host.entity.url) IS NOT NULL,
 entity.attributes.watchlists = MV_DEDUPE(TOP(TO_STRING(host.entity.attributes.watchlists), 10)) WHERE TO_STRING(host.entity.attributes.watchlists) IS NOT NULL,
 entity.attributes.asset = LAST(TO_BOOLEAN(host.entity.attributes.asset), @timestamp) WHERE TO_BOOLEAN(host.entity.attributes.asset) IS NOT NULL,
 entity.attributes.managed = LAST(TO_BOOLEAN(host.entity.attributes.managed), @timestamp) WHERE TO_BOOLEAN(host.entity.attributes.managed) IS NOT NULL,
 entity.attributes.mfa_enabled = LAST(TO_BOOLEAN(host.entity.attributes.mfa_enabled), @timestamp) WHERE TO_BOOLEAN(host.entity.attributes.mfa_enabled) IS NOT NULL,
 entity.attributes.storage_class = LAST(TO_STRING(host.entity.attributes.storage_class), @timestamp) WHERE TO_STRING(host.entity.attributes.storage_class) IS NOT NULL,
 entity.attributes.permissions = MV_DEDUPE(TOP(TO_STRING(host.entity.attributes.permissions), 10)) WHERE TO_STRING(host.entity.attributes.permissions) IS NOT NULL,
 entity.attributes.known_redirects = MV_DEDUPE(TOP(TO_STRING(host.entity.attributes.known_redirects), 10)) WHERE TO_STRING(host.entity.attributes.known_redirects) IS NOT NULL,
 entity.attributes.oauth_consent_restriction = LAST(TO_STRING(host.entity.attributes.oauth_consent_restriction), @timestamp) WHERE TO_STRING(host.entity.attributes.oauth_consent_restriction) IS NOT NULL,
 entity.lifecycle.first_seen = FIRST(TO_DATETIME(@timestamp), @timestamp) WHERE TO_DATETIME(@timestamp) IS NOT NULL,
 entity.lifecycle.last_seen = LAST(TO_DATETIME(@timestamp), @timestamp) WHERE TO_DATETIME(@timestamp) IS NOT NULL,
 entity.lifecycle.last_activity = LAST(TO_DATETIME(host.entity.lifecycle.last_activity), @timestamp) WHERE TO_DATETIME(host.entity.lifecycle.last_activity) IS NOT NULL,
 entity.behaviors.rule_names = MV_DEDUPE(TOP(TO_STRING(host.entity.behaviors.rule_names), 100)) WHERE TO_STRING(host.entity.behaviors.rule_names) IS NOT NULL,
 entity.behaviors.anomaly_job_ids = MV_DEDUPE(TOP(TO_STRING(host.entity.behaviors.anomaly_job_ids), 100)) WHERE TO_STRING(host.entity.behaviors.anomaly_job_ids) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.administers.host.id), 10)) WHERE TO_STRING(host.entity.relationships.administers.host.id) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.administers.user.id), 10)) WHERE TO_STRING(host.entity.relationships.administers.user.id) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.administers.user.email), 10)) WHERE TO_STRING(host.entity.relationships.administers.user.email) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.administers.host.name), 10)) WHERE TO_STRING(host.entity.relationships.administers.host.name) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.administers.user.name), 10)) WHERE TO_STRING(host.entity.relationships.administers.user.name) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.administers.service.name), 10)) WHERE TO_STRING(host.entity.relationships.administers.service.name) IS NOT NULL,
 entity.relationships.administers.ids = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.administers.entity.id), 10)) WHERE TO_STRING(host.entity.relationships.administers.entity.id) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.communicates_with.host.id), 10)) WHERE TO_STRING(host.entity.relationships.communicates_with.host.id) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.communicates_with.user.id), 10)) WHERE TO_STRING(host.entity.relationships.communicates_with.user.id) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.communicates_with.user.email), 10)) WHERE TO_STRING(host.entity.relationships.communicates_with.user.email) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.communicates_with.host.name), 10)) WHERE TO_STRING(host.entity.relationships.communicates_with.host.name) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.communicates_with.user.name), 10)) WHERE TO_STRING(host.entity.relationships.communicates_with.user.name) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.communicates_with.service.name), 10)) WHERE TO_STRING(host.entity.relationships.communicates_with.service.name) IS NOT NULL,
 entity.relationships.communicates_with.ids = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.communicates_with.entity.id), 10)) WHERE TO_STRING(host.entity.relationships.communicates_with.entity.id) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.depends_on.host.id), 10)) WHERE TO_STRING(host.entity.relationships.depends_on.host.id) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.depends_on.user.id), 10)) WHERE TO_STRING(host.entity.relationships.depends_on.user.id) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.depends_on.user.email), 10)) WHERE TO_STRING(host.entity.relationships.depends_on.user.email) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.depends_on.host.name), 10)) WHERE TO_STRING(host.entity.relationships.depends_on.host.name) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.depends_on.user.name), 10)) WHERE TO_STRING(host.entity.relationships.depends_on.user.name) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.depends_on.service.name), 10)) WHERE TO_STRING(host.entity.relationships.depends_on.service.name) IS NOT NULL,
 entity.relationships.depends_on.ids = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.depends_on.entity.id), 10)) WHERE TO_STRING(host.entity.relationships.depends_on.entity.id) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns_inferred.host.id), 10)) WHERE TO_STRING(host.entity.relationships.owns_inferred.host.id) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns_inferred.user.id), 10)) WHERE TO_STRING(host.entity.relationships.owns_inferred.user.id) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns_inferred.user.email), 10)) WHERE TO_STRING(host.entity.relationships.owns_inferred.user.email) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns_inferred.host.name), 10)) WHERE TO_STRING(host.entity.relationships.owns_inferred.host.name) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns_inferred.user.name), 10)) WHERE TO_STRING(host.entity.relationships.owns_inferred.user.name) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns_inferred.service.name), 10)) WHERE TO_STRING(host.entity.relationships.owns_inferred.service.name) IS NOT NULL,
 entity.relationships.owns_inferred.ids = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns_inferred.entity.id), 10)) WHERE TO_STRING(host.entity.relationships.owns_inferred.entity.id) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_infrequently.host.id), 10)) WHERE TO_STRING(host.entity.relationships.accesses_infrequently.host.id) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_infrequently.user.id), 10)) WHERE TO_STRING(host.entity.relationships.accesses_infrequently.user.id) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_infrequently.user.email), 10)) WHERE TO_STRING(host.entity.relationships.accesses_infrequently.user.email) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_infrequently.host.name), 10)) WHERE TO_STRING(host.entity.relationships.accesses_infrequently.host.name) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_infrequently.user.name), 10)) WHERE TO_STRING(host.entity.relationships.accesses_infrequently.user.name) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_infrequently.service.name), 10)) WHERE TO_STRING(host.entity.relationships.accesses_infrequently.service.name) IS NOT NULL,
 entity.relationships.accesses_infrequently.ids = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_infrequently.entity.id), 10)) WHERE TO_STRING(host.entity.relationships.accesses_infrequently.entity.id) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_frequently.host.id), 10)) WHERE TO_STRING(host.entity.relationships.accesses_frequently.host.id) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_frequently.user.id), 10)) WHERE TO_STRING(host.entity.relationships.accesses_frequently.user.id) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_frequently.user.email), 10)) WHERE TO_STRING(host.entity.relationships.accesses_frequently.user.email) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_frequently.host.name), 10)) WHERE TO_STRING(host.entity.relationships.accesses_frequently.host.name) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_frequently.user.name), 10)) WHERE TO_STRING(host.entity.relationships.accesses_frequently.user.name) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_frequently.service.name), 10)) WHERE TO_STRING(host.entity.relationships.accesses_frequently.service.name) IS NOT NULL,
 entity.relationships.accesses_frequently.ids = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_frequently.entity.id), 10)) WHERE TO_STRING(host.entity.relationships.accesses_frequently.entity.id) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns.host.id), 10)) WHERE TO_STRING(host.entity.relationships.owns.host.id) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns.user.id), 10)) WHERE TO_STRING(host.entity.relationships.owns.user.id) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns.user.email), 10)) WHERE TO_STRING(host.entity.relationships.owns.user.email) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns.host.name), 10)) WHERE TO_STRING(host.entity.relationships.owns.host.name) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns.user.name), 10)) WHERE TO_STRING(host.entity.relationships.owns.user.name) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns.service.name), 10)) WHERE TO_STRING(host.entity.relationships.owns.service.name) IS NOT NULL,
 entity.relationships.owns.ids = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns.entity.id), 10)) WHERE TO_STRING(host.entity.relationships.owns.entity.id) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.supervises.host.id), 10)) WHERE TO_STRING(host.entity.relationships.supervises.host.id) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.supervises.user.id), 10)) WHERE TO_STRING(host.entity.relationships.supervises.user.id) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.supervises.user.email), 10)) WHERE TO_STRING(host.entity.relationships.supervises.user.email) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.supervises.host.name), 10)) WHERE TO_STRING(host.entity.relationships.supervises.host.name) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.supervises.user.name), 10)) WHERE TO_STRING(host.entity.relationships.supervises.user.name) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.supervises.service.name), 10)) WHERE TO_STRING(host.entity.relationships.supervises.service.name) IS NOT NULL,
 entity.relationships.supervises.ids = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.supervises.entity.id), 10)) WHERE TO_STRING(host.entity.relationships.supervises.entity.id) IS NOT NULL,
 entity.relationships.resolution.resolved_to = LAST(TO_STRING(host.entity.relationships.resolution.resolved_to), @timestamp) WHERE TO_STRING(host.entity.relationships.resolution.resolved_to) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_level = LAST(TO_STRING(host.entity.relationships.resolution.risk.calculated_level), @timestamp) WHERE TO_STRING(host.entity.relationships.resolution.risk.calculated_level) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_score = LAST(TO_DOUBLE(host.entity.relationships.resolution.risk.calculated_score), @timestamp) WHERE TO_DOUBLE(host.entity.relationships.resolution.risk.calculated_score) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_score_norm = LAST(TO_DOUBLE(host.entity.relationships.resolution.risk.calculated_score_norm), @timestamp) WHERE TO_DOUBLE(host.entity.relationships.resolution.risk.calculated_score_norm) IS NOT NULL
    BY entity.id
| KEEP entity*,
host*,
cloud*,
agent*,
endpoint*,
asset*,
event*,
data_stream*,
@timestamp
| SORT entity.EngineMetadata.FirstSeenLogInPage ASC, entity.id ASC
| LIMIT 5000"
`;

exports[`buildCcsLogsExtractionEsqlQuery generates expected query with log-slice cursor bounds 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM remote:logs-*
    METADATA _index, _id
  | WHERE
      @timestamp >= TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
      AND (NOT(\`host.id\` IS NULL) AND COALESCE(\`host.id\` != \\"\\", TRUE) OR NOT(\`host.name\` IS NULL) AND COALESCE(\`host.name\` != \\"\\", TRUE) OR NOT(\`host.hostname\` IS NULL) AND COALESCE(\`host.hostname\` != \\"\\", TRUE))
      AND (
      @timestamp > TO_DATETIME(\\"2022-01-01T06:00:00.000Z\\")
      OR (
        @timestamp == TO_DATETIME(\\"2022-01-01T06:00:00.000Z\\")
        AND \`_id\` > \\"start-doc-id\\"
      )
    )
      AND (
      @timestamp < TO_DATETIME(\\"2022-01-01T12:00:00.000Z\\")
      OR (
        @timestamp == TO_DATETIME(\\"2022-01-01T12:00:00.000Z\\")
        AND \`_id\` <= \\"end-doc-id\\"
      )
    )
| EVAL _src_entity_source0 = MV_FIRST(event.module),
 _src_entity_source1 = MV_FIRST(event.dataset),
 _src_entity_source2 = MV_FIRST(data_stream.dataset),
 _src_entity_source = CASE((_src_entity_source0 IS NOT NULL AND _src_entity_source0 != \\"\\"), _src_entity_source0, (_src_entity_source1 IS NOT NULL AND _src_entity_source1 != \\"\\"), _src_entity_source1, (_src_entity_source2 IS NOT NULL AND _src_entity_source2 != \\"\\"), _src_entity_source2, NULL),
 entity.source = CASE((_src_entity_source IS NULL OR _src_entity_source == \\"\\"), NULL, _src_entity_source)
| EVAL entity.id = CONCAT(\\"host:\\", CASE((host.id IS NOT NULL AND host.id != \\"\\"), host.id,
(host.name IS NOT NULL AND host.name != \\"\\"), host.name,
(host.hostname IS NOT NULL AND host.hostname != \\"\\"), host.hostname, NULL))
| STATS
    @timestamp = MAX(@timestamp),
    entity.EngineMetadata.FirstSeenLogInPage = MIN(@timestamp),
    entity.name = LAST(TO_STRING(host.name), @timestamp) WHERE TO_STRING(host.name) IS NOT NULL,
 host.entity.id = FIRST(TO_STRING(host.entity.id), @timestamp) WHERE TO_STRING(host.entity.id) IS NOT NULL,
 host.name = MV_DEDUPE(TOP(TO_STRING(host.name), 10)) WHERE TO_STRING(host.name) IS NOT NULL,
 host.domain = MV_DEDUPE(TOP(TO_STRING(host.domain), 10)) WHERE TO_STRING(host.domain) IS NOT NULL,
 host.hostname = MV_DEDUPE(TOP(TO_STRING(host.hostname), 10)) WHERE TO_STRING(host.hostname) IS NOT NULL,
 host.id = MV_DEDUPE(TOP(TO_STRING(host.id), 10)) WHERE TO_STRING(host.id) IS NOT NULL,
 host.os.name = MV_DEDUPE(TOP(TO_STRING(host.os.name), 10)) WHERE TO_STRING(host.os.name) IS NOT NULL,
 host.os.type = MV_DEDUPE(TOP(TO_STRING(host.os.type), 10)) WHERE TO_STRING(host.os.type) IS NOT NULL,
 host.ip = MV_DEDUPE(TOP(TO_IP(host.ip), 10)) WHERE TO_IP(host.ip) IS NOT NULL,
 host.mac = MV_DEDUPE(TOP(TO_STRING(host.mac), 10)) WHERE TO_STRING(host.mac) IS NOT NULL,
 host.type = MV_DEDUPE(TOP(TO_STRING(host.type), 10)) WHERE TO_STRING(host.type) IS NOT NULL,
 host.architecture = MV_DEDUPE(TOP(TO_STRING(host.architecture), 10)) WHERE TO_STRING(host.architecture) IS NOT NULL,
 host.boot.id = LAST(TO_STRING(host.boot.id), @timestamp) WHERE TO_STRING(host.boot.id) IS NOT NULL,
 host.cpu.usage = LAST(host.cpu.usage, @timestamp) WHERE host.cpu.usage IS NOT NULL,
 host.disk.read.bytes = LAST(TO_LONG(host.disk.read.bytes), @timestamp) WHERE TO_LONG(host.disk.read.bytes) IS NOT NULL,
 host.disk.write.bytes = LAST(TO_LONG(host.disk.write.bytes), @timestamp) WHERE TO_LONG(host.disk.write.bytes) IS NOT NULL,
 host.network.egress.bytes = LAST(TO_LONG(host.network.egress.bytes), @timestamp) WHERE TO_LONG(host.network.egress.bytes) IS NOT NULL,
 host.network.egress.packets = LAST(TO_LONG(host.network.egress.packets), @timestamp) WHERE TO_LONG(host.network.egress.packets) IS NOT NULL,
 host.network.ingress.bytes = LAST(TO_LONG(host.network.ingress.bytes), @timestamp) WHERE TO_LONG(host.network.ingress.bytes) IS NOT NULL,
 host.network.ingress.packets = LAST(TO_LONG(host.network.ingress.packets), @timestamp) WHERE TO_LONG(host.network.ingress.packets) IS NOT NULL,
 host.uptime = LAST(TO_LONG(host.uptime), @timestamp) WHERE TO_LONG(host.uptime) IS NOT NULL,
 host.pid_ns_ino = LAST(TO_STRING(host.pid_ns_ino), @timestamp) WHERE TO_STRING(host.pid_ns_ino) IS NOT NULL,
 host.os.family = LAST(TO_STRING(host.os.family), @timestamp) WHERE TO_STRING(host.os.family) IS NOT NULL,
 host.os.full = LAST(TO_STRING(host.os.full), @timestamp) WHERE TO_STRING(host.os.full) IS NOT NULL,
 host.os.kernel = LAST(TO_STRING(host.os.kernel), @timestamp) WHERE TO_STRING(host.os.kernel) IS NOT NULL,
 host.os.platform = LAST(TO_STRING(host.os.platform), @timestamp) WHERE TO_STRING(host.os.platform) IS NOT NULL,
 host.os.version = LAST(TO_STRING(host.os.version), @timestamp) WHERE TO_STRING(host.os.version) IS NOT NULL,
 host.geo.city_name = LAST(TO_STRING(host.geo.city_name), @timestamp) WHERE TO_STRING(host.geo.city_name) IS NOT NULL,
 host.geo.continent_code = LAST(TO_STRING(host.geo.continent_code), @timestamp) WHERE TO_STRING(host.geo.continent_code) IS NOT NULL,
 host.geo.continent_name = LAST(TO_STRING(host.geo.continent_name), @timestamp) WHERE TO_STRING(host.geo.continent_name) IS NOT NULL,
 host.geo.country_iso_code = LAST(TO_STRING(host.geo.country_iso_code), @timestamp) WHERE TO_STRING(host.geo.country_iso_code) IS NOT NULL,
 host.geo.country_name = LAST(TO_STRING(host.geo.country_name), @timestamp) WHERE TO_STRING(host.geo.country_name) IS NOT NULL,
 host.geo.name = MV_DEDUPE(TOP(TO_STRING(host.geo.name), 10)) WHERE TO_STRING(host.geo.name) IS NOT NULL,
 host.geo.postal_code = MV_DEDUPE(TOP(TO_STRING(host.geo.postal_code), 10)) WHERE TO_STRING(host.geo.postal_code) IS NOT NULL,
 host.geo.region_iso_code = MV_DEDUPE(TOP(TO_STRING(host.geo.region_iso_code), 10)) WHERE TO_STRING(host.geo.region_iso_code) IS NOT NULL,
 host.geo.region_name = MV_DEDUPE(TOP(TO_STRING(host.geo.region_name), 10)) WHERE TO_STRING(host.geo.region_name) IS NOT NULL,
 host.geo.timezone = MV_DEDUPE(TOP(TO_STRING(host.geo.timezone), 10)) WHERE TO_STRING(host.geo.timezone) IS NOT NULL,
 cloud.provider = LAST(TO_STRING(cloud.provider), @timestamp) WHERE TO_STRING(cloud.provider) IS NOT NULL,
 cloud.region = LAST(TO_STRING(cloud.region), @timestamp) WHERE TO_STRING(cloud.region) IS NOT NULL,
 cloud.instance.id = LAST(TO_STRING(cloud.instance.id), @timestamp) WHERE TO_STRING(cloud.instance.id) IS NOT NULL,
 cloud.machine.type = LAST(TO_STRING(cloud.machine.type), @timestamp) WHERE TO_STRING(cloud.machine.type) IS NOT NULL,
 agent.id = LAST(TO_STRING(agent.id), @timestamp) WHERE TO_STRING(agent.id) IS NOT NULL,
 agent.type = LAST(TO_STRING(agent.type), @timestamp) WHERE TO_STRING(agent.type) IS NOT NULL,
 endpoint.id = LAST(TO_STRING(endpoint.id), @timestamp) WHERE TO_STRING(endpoint.id) IS NOT NULL,
 asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE TO_STRING(asset.id) IS NOT NULL,
 asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE TO_STRING(asset.name) IS NOT NULL,
 asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE TO_STRING(asset.owner) IS NOT NULL,
 asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE TO_STRING(asset.serial_number) IS NOT NULL,
 asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE TO_STRING(asset.model) IS NOT NULL,
 asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE TO_STRING(asset.vendor) IS NOT NULL,
 asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE TO_STRING(asset.environment) IS NOT NULL,
 asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE TO_STRING(asset.criticality) IS NOT NULL,
 asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE TO_STRING(asset.business_unit) IS NOT NULL,
 entity.risk.calculated_level = LAST(TO_STRING(host.risk.calculated_level), @timestamp) WHERE TO_STRING(host.risk.calculated_level) IS NOT NULL,
 entity.risk.calculated_score = LAST(TO_DOUBLE(host.risk.calculated_score), @timestamp) WHERE TO_DOUBLE(host.risk.calculated_score) IS NOT NULL,
 entity.risk.calculated_score_norm = LAST(TO_DOUBLE(host.risk.calculated_score_norm), @timestamp) WHERE TO_DOUBLE(host.risk.calculated_score_norm) IS NOT NULL,
 event.module = MV_DEDUPE(TOP(TO_STRING(event.module), 10)) WHERE TO_STRING(event.module) IS NOT NULL,
 event.dataset = MV_DEDUPE(TOP(TO_STRING(event.dataset), 10)) WHERE TO_STRING(event.dataset) IS NOT NULL,
 data_stream.dataset = MV_DEDUPE(TOP(TO_STRING(data_stream.dataset), 50)) WHERE TO_STRING(data_stream.dataset) IS NOT NULL,
 entity.source = MV_DEDUPE(TOP(TO_STRING(entity.source), 50)) WHERE TO_STRING(entity.source) IS NOT NULL,
 entity.type = LAST(TO_STRING(host.entity.type), @timestamp) WHERE TO_STRING(host.entity.type) IS NOT NULL,
 entity.sub_type = LAST(TO_STRING(host.entity.sub_type), @timestamp) WHERE TO_STRING(host.entity.sub_type) IS NOT NULL,
 entity.url = LAST(TO_STRING(host.entity.url), @timestamp) WHERE TO_STRING(host.entity.url) IS NOT NULL,
 entity.attributes.watchlists = MV_DEDUPE(TOP(TO_STRING(host.entity.attributes.watchlists), 10)) WHERE TO_STRING(host.entity.attributes.watchlists) IS NOT NULL,
 entity.attributes.asset = LAST(TO_BOOLEAN(host.entity.attributes.asset), @timestamp) WHERE TO_BOOLEAN(host.entity.attributes.asset) IS NOT NULL,
 entity.attributes.managed = LAST(TO_BOOLEAN(host.entity.attributes.managed), @timestamp) WHERE TO_BOOLEAN(host.entity.attributes.managed) IS NOT NULL,
 entity.attributes.mfa_enabled = LAST(TO_BOOLEAN(host.entity.attributes.mfa_enabled), @timestamp) WHERE TO_BOOLEAN(host.entity.attributes.mfa_enabled) IS NOT NULL,
 entity.attributes.storage_class = LAST(TO_STRING(host.entity.attributes.storage_class), @timestamp) WHERE TO_STRING(host.entity.attributes.storage_class) IS NOT NULL,
 entity.attributes.permissions = MV_DEDUPE(TOP(TO_STRING(host.entity.attributes.permissions), 10)) WHERE TO_STRING(host.entity.attributes.permissions) IS NOT NULL,
 entity.attributes.known_redirects = MV_DEDUPE(TOP(TO_STRING(host.entity.attributes.known_redirects), 10)) WHERE TO_STRING(host.entity.attributes.known_redirects) IS NOT NULL,
 entity.attributes.oauth_consent_restriction = LAST(TO_STRING(host.entity.attributes.oauth_consent_restriction), @timestamp) WHERE TO_STRING(host.entity.attributes.oauth_consent_restriction) IS NOT NULL,
 entity.lifecycle.first_seen = FIRST(TO_DATETIME(@timestamp), @timestamp) WHERE TO_DATETIME(@timestamp) IS NOT NULL,
 entity.lifecycle.last_seen = LAST(TO_DATETIME(@timestamp), @timestamp) WHERE TO_DATETIME(@timestamp) IS NOT NULL,
 entity.lifecycle.last_activity = LAST(TO_DATETIME(host.entity.lifecycle.last_activity), @timestamp) WHERE TO_DATETIME(host.entity.lifecycle.last_activity) IS NOT NULL,
 entity.behaviors.rule_names = MV_DEDUPE(TOP(TO_STRING(host.entity.behaviors.rule_names), 100)) WHERE TO_STRING(host.entity.behaviors.rule_names) IS NOT NULL,
 entity.behaviors.anomaly_job_ids = MV_DEDUPE(TOP(TO_STRING(host.entity.behaviors.anomaly_job_ids), 100)) WHERE TO_STRING(host.entity.behaviors.anomaly_job_ids) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.administers.host.id), 10)) WHERE TO_STRING(host.entity.relationships.administers.host.id) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.administers.user.id), 10)) WHERE TO_STRING(host.entity.relationships.administers.user.id) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.administers.user.email), 10)) WHERE TO_STRING(host.entity.relationships.administers.user.email) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.administers.host.name), 10)) WHERE TO_STRING(host.entity.relationships.administers.host.name) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.administers.user.name), 10)) WHERE TO_STRING(host.entity.relationships.administers.user.name) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.administers.service.name), 10)) WHERE TO_STRING(host.entity.relationships.administers.service.name) IS NOT NULL,
 entity.relationships.administers.ids = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.administers.entity.id), 10)) WHERE TO_STRING(host.entity.relationships.administers.entity.id) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.communicates_with.host.id), 10)) WHERE TO_STRING(host.entity.relationships.communicates_with.host.id) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.communicates_with.user.id), 10)) WHERE TO_STRING(host.entity.relationships.communicates_with.user.id) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.communicates_with.user.email), 10)) WHERE TO_STRING(host.entity.relationships.communicates_with.user.email) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.communicates_with.host.name), 10)) WHERE TO_STRING(host.entity.relationships.communicates_with.host.name) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.communicates_with.user.name), 10)) WHERE TO_STRING(host.entity.relationships.communicates_with.user.name) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.communicates_with.service.name), 10)) WHERE TO_STRING(host.entity.relationships.communicates_with.service.name) IS NOT NULL,
 entity.relationships.communicates_with.ids = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.communicates_with.entity.id), 10)) WHERE TO_STRING(host.entity.relationships.communicates_with.entity.id) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.depends_on.host.id), 10)) WHERE TO_STRING(host.entity.relationships.depends_on.host.id) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.depends_on.user.id), 10)) WHERE TO_STRING(host.entity.relationships.depends_on.user.id) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.depends_on.user.email), 10)) WHERE TO_STRING(host.entity.relationships.depends_on.user.email) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.depends_on.host.name), 10)) WHERE TO_STRING(host.entity.relationships.depends_on.host.name) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.depends_on.user.name), 10)) WHERE TO_STRING(host.entity.relationships.depends_on.user.name) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.depends_on.service.name), 10)) WHERE TO_STRING(host.entity.relationships.depends_on.service.name) IS NOT NULL,
 entity.relationships.depends_on.ids = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.depends_on.entity.id), 10)) WHERE TO_STRING(host.entity.relationships.depends_on.entity.id) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns_inferred.host.id), 10)) WHERE TO_STRING(host.entity.relationships.owns_inferred.host.id) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns_inferred.user.id), 10)) WHERE TO_STRING(host.entity.relationships.owns_inferred.user.id) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns_inferred.user.email), 10)) WHERE TO_STRING(host.entity.relationships.owns_inferred.user.email) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns_inferred.host.name), 10)) WHERE TO_STRING(host.entity.relationships.owns_inferred.host.name) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns_inferred.user.name), 10)) WHERE TO_STRING(host.entity.relationships.owns_inferred.user.name) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns_inferred.service.name), 10)) WHERE TO_STRING(host.entity.relationships.owns_inferred.service.name) IS NOT NULL,
 entity.relationships.owns_inferred.ids = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns_inferred.entity.id), 10)) WHERE TO_STRING(host.entity.relationships.owns_inferred.entity.id) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_infrequently.host.id), 10)) WHERE TO_STRING(host.entity.relationships.accesses_infrequently.host.id) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_infrequently.user.id), 10)) WHERE TO_STRING(host.entity.relationships.accesses_infrequently.user.id) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_infrequently.user.email), 10)) WHERE TO_STRING(host.entity.relationships.accesses_infrequently.user.email) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_infrequently.host.name), 10)) WHERE TO_STRING(host.entity.relationships.accesses_infrequently.host.name) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_infrequently.user.name), 10)) WHERE TO_STRING(host.entity.relationships.accesses_infrequently.user.name) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_infrequently.service.name), 10)) WHERE TO_STRING(host.entity.relationships.accesses_infrequently.service.name) IS NOT NULL,
 entity.relationships.accesses_infrequently.ids = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_infrequently.entity.id), 10)) WHERE TO_STRING(host.entity.relationships.accesses_infrequently.entity.id) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_frequently.host.id), 10)) WHERE TO_STRING(host.entity.relationships.accesses_frequently.host.id) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_frequently.user.id), 10)) WHERE TO_STRING(host.entity.relationships.accesses_frequently.user.id) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_frequently.user.email), 10)) WHERE TO_STRING(host.entity.relationships.accesses_frequently.user.email) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_frequently.host.name), 10)) WHERE TO_STRING(host.entity.relationships.accesses_frequently.host.name) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_frequently.user.name), 10)) WHERE TO_STRING(host.entity.relationships.accesses_frequently.user.name) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_frequently.service.name), 10)) WHERE TO_STRING(host.entity.relationships.accesses_frequently.service.name) IS NOT NULL,
 entity.relationships.accesses_frequently.ids = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.accesses_frequently.entity.id), 10)) WHERE TO_STRING(host.entity.relationships.accesses_frequently.entity.id) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns.host.id), 10)) WHERE TO_STRING(host.entity.relationships.owns.host.id) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns.user.id), 10)) WHERE TO_STRING(host.entity.relationships.owns.user.id) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns.user.email), 10)) WHERE TO_STRING(host.entity.relationships.owns.user.email) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns.host.name), 10)) WHERE TO_STRING(host.entity.relationships.owns.host.name) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns.user.name), 10)) WHERE TO_STRING(host.entity.relationships.owns.user.name) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns.service.name), 10)) WHERE TO_STRING(host.entity.relationships.owns.service.name) IS NOT NULL,
 entity.relationships.owns.ids = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.owns.entity.id), 10)) WHERE TO_STRING(host.entity.relationships.owns.entity.id) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.supervises.host.id), 10)) WHERE TO_STRING(host.entity.relationships.supervises.host.id) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.supervises.user.id), 10)) WHERE TO_STRING(host.entity.relationships.supervises.user.id) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.supervises.user.email), 10)) WHERE TO_STRING(host.entity.relationships.supervises.user.email) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.supervises.host.name), 10)) WHERE TO_STRING(host.entity.relationships.supervises.host.name) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.supervises.user.name), 10)) WHERE TO_STRING(host.entity.relationships.supervises.user.name) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.supervises.service.name), 10)) WHERE TO_STRING(host.entity.relationships.supervises.service.name) IS NOT NULL,
 entity.relationships.supervises.ids = MV_DEDUPE(TOP(TO_STRING(host.entity.relationships.supervises.entity.id), 10)) WHERE TO_STRING(host.entity.relationships.supervises.entity.id) IS NOT NULL,
 entity.relationships.resolution.resolved_to = LAST(TO_STRING(host.entity.relationships.resolution.resolved_to), @timestamp) WHERE TO_STRING(host.entity.relationships.resolution.resolved_to) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_level = LAST(TO_STRING(host.entity.relationships.resolution.risk.calculated_level), @timestamp) WHERE TO_STRING(host.entity.relationships.resolution.risk.calculated_level) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_score = LAST(TO_DOUBLE(host.entity.relationships.resolution.risk.calculated_score), @timestamp) WHERE TO_DOUBLE(host.entity.relationships.resolution.risk.calculated_score) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_score_norm = LAST(TO_DOUBLE(host.entity.relationships.resolution.risk.calculated_score_norm), @timestamp) WHERE TO_DOUBLE(host.entity.relationships.resolution.risk.calculated_score_norm) IS NOT NULL
    BY entity.id
| KEEP entity*,
host*,
cloud*,
agent*,
endpoint*,
asset*,
event*,
data_stream*,
@timestamp
| SORT entity.EngineMetadata.FirstSeenLogInPage ASC, entity.id ASC
| LIMIT 10000"
`;

exports[`buildCcsLogsExtractionEsqlQuery generates expected query with pagination 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM remote:logs-*
    METADATA _index, _id
  | WHERE
      @timestamp >= TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
      AND ((\`event.outcome\` IS NULL OR COALESCE(\`event.outcome\` != \\"failure\\", TRUE)) AND (NOT(\`user.email\` IS NULL) AND COALESCE(\`user.email\` != \\"\\", TRUE) OR NOT(\`user.id\` IS NULL) AND COALESCE(\`user.id\` != \\"\\", TRUE) OR NOT(\`user.name\` IS NULL) AND COALESCE(\`user.name\` != \\"\\", TRUE)))
| EVAL _src_entity_source0 = MV_FIRST(event.module),
 _src_entity_source1 = MV_FIRST(event.dataset),
 _src_entity_source2 = MV_FIRST(data_stream.dataset),
 _src_entity_source = CASE((_src_entity_source0 IS NOT NULL AND _src_entity_source0 != \\"\\"), _src_entity_source0, (_src_entity_source1 IS NOT NULL AND _src_entity_source1 != \\"\\"), _src_entity_source1, (_src_entity_source2 IS NOT NULL AND _src_entity_source2 != \\"\\"), _src_entity_source2, NULL),
 entity.source = CASE((_src_entity_source IS NULL OR _src_entity_source == \\"\\"), NULL, _src_entity_source),
 _src_entity_namespace0 = MV_FIRST(event.module),
 _src_entity_namespace1 = MV_FIRST(SPLIT(MV_FIRST(data_stream.dataset), \\".\\")),
 _src_entity_namespace = CASE((_src_entity_namespace0 IS NOT NULL AND _src_entity_namespace0 != \\"\\"), _src_entity_namespace0, (_src_entity_namespace1 IS NOT NULL AND _src_entity_namespace1 != \\"\\"), _src_entity_namespace1, NULL),
 entity.namespace = CASE((NOT(\`user.name\` IS NULL) AND COALESCE(\`user.name\` != \\"\\", TRUE) AND NOT(\`host.id\` IS NULL) AND COALESCE(\`host.id\` != \\"\\", TRUE) AND NOT (COALESCE(\`user.name\` == \\"root\\", FALSE) OR COALESCE(\`user.name\` == \\"bin\\", FALSE) OR COALESCE(\`user.name\` == \\"daemon\\", FALSE) OR COALESCE(\`user.name\` == \\"sys\\", FALSE) OR COALESCE(\`user.name\` == \\"nobody\\", FALSE) OR COALESCE(\`user.name\` == \\"jenkins\\", FALSE) OR COALESCE(\`user.name\` == \\"ansible\\", FALSE) OR COALESCE(\`user.name\` == \\"deploy\\", FALSE) OR COALESCE(\`user.name\` == \\"terraform\\", FALSE) OR COALESCE(\`user.name\` == \\"gitlab-runner\\", FALSE) OR COALESCE(\`user.name\` == \\"postgres\\", FALSE) OR COALESCE(\`user.name\` == \\"mysql\\", FALSE) OR COALESCE(\`user.name\` == \\"redis\\", FALSE) OR COALESCE(\`user.name\` == \\"elasticsearch\\", FALSE) OR COALESCE(\`user.name\` == \\"kafka\\", FALSE) OR COALESCE(\`user.name\` == \\"admin\\", FALSE) OR COALESCE(\`user.name\` == \\"operator\\", FALSE) OR COALESCE(\`user.name\` == \\"service\\", FALSE)) AND (COALESCE(MV_CONTAINS(\`event.kind\`, \\"asset\\"), FALSE) OR NOT (COALESCE(MV_CONTAINS(\`event.kind\`, \\"asset\\"), FALSE) OR (COALESCE(\`event.kind\` != \\"enrichment\\", TRUE) OR \`event.kind\` IS NULL) AND COALESCE(MV_CONTAINS(\`event.category\`, \\"iam\\"), FALSE) AND (COALESCE(MV_CONTAINS(\`event.type\`, \\"user\\"), FALSE) OR COALESCE(MV_CONTAINS(\`event.type\`, \\"creation\\"), FALSE) OR COALESCE(MV_CONTAINS(\`event.type\`, \\"deletion\\"), FALSE) OR COALESCE(MV_CONTAINS(\`event.type\`, \\"group\\"), FALSE))))), \\"local\\", (_src_entity_namespace == \\"okta\\" OR _src_entity_namespace == \\"entityanalytics_okta\\"), \\"okta\\", (_src_entity_namespace == \\"azure\\" OR _src_entity_namespace == \\"entityanalytics_entra_id\\"), \\"entra_id\\", (_src_entity_namespace == \\"o365\\" OR _src_entity_namespace == \\"o365_metrics\\"), \\"microsoft_365\\", (_src_entity_namespace == \\"entityanalytics_ad\\"), \\"active_directory\\", (_src_entity_namespace IS NULL OR _src_entity_namespace == \\"\\"), \\"unknown\\", _src_entity_namespace)
| EVAL entity.id = CONCAT(\\"user:\\", CASE((COALESCE(\`entity.namespace\` == \\"local\\", FALSE)), CASE((user.name IS NOT NULL AND user.name != \\"\\" AND host.id IS NOT NULL AND host.id != \\"\\" AND entity.namespace IS NOT NULL AND entity.namespace != \\"\\"), CONCAT(user.name, \\"@\\", host.id, \\"@\\", entity.namespace), NULL),
true, CASE((user.email IS NOT NULL AND user.email != \\"\\" AND entity.namespace IS NOT NULL AND entity.namespace != \\"\\"), CONCAT(user.email, \\"@\\", entity.namespace),
(user.id IS NOT NULL AND user.id != \\"\\" AND entity.namespace IS NOT NULL AND entity.namespace != \\"\\"), CONCAT(user.id, \\"@\\", entity.namespace),
(user.name IS NOT NULL AND user.name != \\"\\" AND user.domain IS NOT NULL AND user.domain != \\"\\" AND entity.namespace IS NOT NULL AND entity.namespace != \\"\\"), CONCAT(user.name, \\"@\\", user.domain, \\"@\\", entity.namespace),
(user.name IS NOT NULL AND user.name != \\"\\" AND entity.namespace IS NOT NULL AND entity.namespace != \\"\\"), CONCAT(user.name, \\"@\\", entity.namespace), NULL), NULL))
| STATS
    @timestamp = MAX(@timestamp),
    entity.EngineMetadata.FirstSeenLogInPage = MIN(@timestamp),
    entity.name = LAST(TO_STRING(entity.name), @timestamp) WHERE TO_STRING(entity.name) IS NOT NULL,
 event.kind = MV_DEDUPE(TOP(TO_STRING(event.kind), 10)) WHERE TO_STRING(event.kind) IS NOT NULL,
 event.category = MV_DEDUPE(TOP(TO_STRING(event.category), 10)) WHERE TO_STRING(event.category) IS NOT NULL,
 event.type = MV_DEDUPE(TOP(TO_STRING(event.type), 10)) WHERE TO_STRING(event.type) IS NOT NULL,
 event.outcome = MV_DEDUPE(TOP(TO_STRING(event.outcome), 10)) WHERE TO_STRING(event.outcome) IS NOT NULL,
 entity.namespace = LAST(TO_STRING(entity.namespace), @timestamp) WHERE TO_STRING(entity.namespace) IS NOT NULL,
 entity.confidence = FIRST(TO_STRING(entity.confidence), @timestamp) WHERE TO_STRING(entity.confidence) IS NOT NULL,
 user.domain = MV_DEDUPE(TOP(TO_STRING(user.domain), 10)) WHERE TO_STRING(user.domain) IS NOT NULL,
 user.email = MV_DEDUPE(TOP(TO_STRING(user.email), 10)) WHERE TO_STRING(user.email) IS NOT NULL,
 user.name = LAST(TO_STRING(user.name), @timestamp) WHERE TO_STRING(user.name) IS NOT NULL,
 user.full_name = MV_DEDUPE(TOP(TO_STRING(user.full_name), 10)) WHERE TO_STRING(user.full_name) IS NOT NULL,
 user.hash = MV_DEDUPE(TOP(TO_STRING(user.hash), 10)) WHERE TO_STRING(user.hash) IS NOT NULL,
 user.id = MV_DEDUPE(TOP(TO_STRING(user.id), 10)) WHERE TO_STRING(user.id) IS NOT NULL,
 user.roles = MV_DEDUPE(TOP(TO_STRING(user.roles), 10)) WHERE TO_STRING(user.roles) IS NOT NULL,
 user.group.domain = MV_DEDUPE(TOP(TO_STRING(user.group.domain), 10)) WHERE TO_STRING(user.group.domain) IS NOT NULL,
 user.group.id = MV_DEDUPE(TOP(TO_STRING(user.group.id), 10)) WHERE TO_STRING(user.group.id) IS NOT NULL,
 user.group.name = MV_DEDUPE(TOP(TO_STRING(user.group.name), 10)) WHERE TO_STRING(user.group.name) IS NOT NULL,
 asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE TO_STRING(asset.id) IS NOT NULL,
 asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE TO_STRING(asset.name) IS NOT NULL,
 asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE TO_STRING(asset.owner) IS NOT NULL,
 asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE TO_STRING(asset.serial_number) IS NOT NULL,
 asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE TO_STRING(asset.model) IS NOT NULL,
 asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE TO_STRING(asset.vendor) IS NOT NULL,
 asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE TO_STRING(asset.environment) IS NOT NULL,
 asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE TO_STRING(asset.criticality) IS NOT NULL,
 asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE TO_STRING(asset.business_unit) IS NOT NULL,
 entity.risk.calculated_level = LAST(TO_STRING(user.risk.calculated_level), @timestamp) WHERE TO_STRING(user.risk.calculated_level) IS NOT NULL,
 entity.risk.calculated_score = LAST(TO_DOUBLE(user.risk.calculated_score), @timestamp) WHERE TO_DOUBLE(user.risk.calculated_score) IS NOT NULL,
 entity.risk.calculated_score_norm = LAST(TO_DOUBLE(user.risk.calculated_score_norm), @timestamp) WHERE TO_DOUBLE(user.risk.calculated_score_norm) IS NOT NULL,
 event.module = MV_DEDUPE(TOP(TO_STRING(event.module), 10)) WHERE TO_STRING(event.module) IS NOT NULL,
 event.dataset = MV_DEDUPE(TOP(TO_STRING(event.dataset), 10)) WHERE TO_STRING(event.dataset) IS NOT NULL,
 data_stream.dataset = MV_DEDUPE(TOP(TO_STRING(data_stream.dataset), 50)) WHERE TO_STRING(data_stream.dataset) IS NOT NULL,
 entity.source = MV_DEDUPE(TOP(TO_STRING(entity.source), 50)) WHERE TO_STRING(entity.source) IS NOT NULL,
 entity.type = LAST(TO_STRING(user.entity.type), @timestamp) WHERE TO_STRING(user.entity.type) IS NOT NULL,
 entity.sub_type = LAST(TO_STRING(user.entity.sub_type), @timestamp) WHERE TO_STRING(user.entity.sub_type) IS NOT NULL,
 entity.url = LAST(TO_STRING(user.entity.url), @timestamp) WHERE TO_STRING(user.entity.url) IS NOT NULL,
 entity.attributes.watchlists = MV_DEDUPE(TOP(TO_STRING(user.entity.attributes.watchlists), 10)) WHERE TO_STRING(user.entity.attributes.watchlists) IS NOT NULL,
 entity.attributes.asset = LAST(TO_BOOLEAN(user.entity.attributes.asset), @timestamp) WHERE TO_BOOLEAN(user.entity.attributes.asset) IS NOT NULL,
 entity.attributes.managed = LAST(TO_BOOLEAN(user.entity.attributes.managed), @timestamp) WHERE TO_BOOLEAN(user.entity.attributes.managed) IS NOT NULL,
 entity.attributes.mfa_enabled = LAST(TO_BOOLEAN(user.entity.attributes.mfa_enabled), @timestamp) WHERE TO_BOOLEAN(user.entity.attributes.mfa_enabled) IS NOT NULL,
 entity.attributes.storage_class = LAST(TO_STRING(user.entity.attributes.storage_class), @timestamp) WHERE TO_STRING(user.entity.attributes.storage_class) IS NOT NULL,
 entity.attributes.permissions = MV_DEDUPE(TOP(TO_STRING(user.entity.attributes.permissions), 10)) WHERE TO_STRING(user.entity.attributes.permissions) IS NOT NULL,
 entity.attributes.known_redirects = MV_DEDUPE(TOP(TO_STRING(user.entity.attributes.known_redirects), 10)) WHERE TO_STRING(user.entity.attributes.known_redirects) IS NOT NULL,
 entity.attributes.oauth_consent_restriction = LAST(TO_STRING(user.entity.attributes.oauth_consent_restriction), @timestamp) WHERE TO_STRING(user.entity.attributes.oauth_consent_restriction) IS NOT NULL,
 entity.lifecycle.first_seen = FIRST(TO_DATETIME(@timestamp), @timestamp) WHERE TO_DATETIME(@timestamp) IS NOT NULL,
 entity.lifecycle.last_seen = LAST(TO_DATETIME(@timestamp), @timestamp) WHERE TO_DATETIME(@timestamp) IS NOT NULL,
 entity.lifecycle.last_activity = LAST(TO_DATETIME(user.entity.lifecycle.last_activity), @timestamp) WHERE TO_DATETIME(user.entity.lifecycle.last_activity) IS NOT NULL,
 entity.behaviors.rule_names = MV_DEDUPE(TOP(TO_STRING(user.entity.behaviors.rule_names), 100)) WHERE TO_STRING(user.entity.behaviors.rule_names) IS NOT NULL,
 entity.behaviors.anomaly_job_ids = MV_DEDUPE(TOP(TO_STRING(user.entity.behaviors.anomaly_job_ids), 100)) WHERE TO_STRING(user.entity.behaviors.anomaly_job_ids) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.administers.host.id), 10)) WHERE TO_STRING(user.entity.relationships.administers.host.id) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.administers.user.id), 10)) WHERE TO_STRING(user.entity.relationships.administers.user.id) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.administers.user.email), 10)) WHERE TO_STRING(user.entity.relationships.administers.user.email) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.administers.host.name), 10)) WHERE TO_STRING(user.entity.relationships.administers.host.name) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.administers.user.name), 10)) WHERE TO_STRING(user.entity.relationships.administers.user.name) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.administers.service.name), 10)) WHERE TO_STRING(user.entity.relationships.administers.service.name) IS NOT NULL,
 entity.relationships.administers.ids = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.administers.entity.id), 10)) WHERE TO_STRING(user.entity.relationships.administers.entity.id) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.communicates_with.host.id), 10)) WHERE TO_STRING(user.entity.relationships.communicates_with.host.id) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.communicates_with.user.id), 10)) WHERE TO_STRING(user.entity.relationships.communicates_with.user.id) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.communicates_with.user.email), 10)) WHERE TO_STRING(user.entity.relationships.communicates_with.user.email) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.communicates_with.host.name), 10)) WHERE TO_STRING(user.entity.relationships.communicates_with.host.name) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.communicates_with.user.name), 10)) WHERE TO_STRING(user.entity.relationships.communicates_with.user.name) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.communicates_with.service.name), 10)) WHERE TO_STRING(user.entity.relationships.communicates_with.service.name) IS NOT NULL,
 entity.relationships.communicates_with.ids = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.communicates_with.entity.id), 10)) WHERE TO_STRING(user.entity.relationships.communicates_with.entity.id) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.depends_on.host.id), 10)) WHERE TO_STRING(user.entity.relationships.depends_on.host.id) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.depends_on.user.id), 10)) WHERE TO_STRING(user.entity.relationships.depends_on.user.id) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.depends_on.user.email), 10)) WHERE TO_STRING(user.entity.relationships.depends_on.user.email) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.depends_on.host.name), 10)) WHERE TO_STRING(user.entity.relationships.depends_on.host.name) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.depends_on.user.name), 10)) WHERE TO_STRING(user.entity.relationships.depends_on.user.name) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.depends_on.service.name), 10)) WHERE TO_STRING(user.entity.relationships.depends_on.service.name) IS NOT NULL,
 entity.relationships.depends_on.ids = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.depends_on.entity.id), 10)) WHERE TO_STRING(user.entity.relationships.depends_on.entity.id) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.owns_inferred.host.id), 10)) WHERE TO_STRING(user.entity.relationships.owns_inferred.host.id) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.owns_inferred.user.id), 10)) WHERE TO_STRING(user.entity.relationships.owns_inferred.user.id) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.owns_inferred.user.email), 10)) WHERE TO_STRING(user.entity.relationships.owns_inferred.user.email) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.owns_inferred.host.name), 10)) WHERE TO_STRING(user.entity.relationships.owns_inferred.host.name) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.owns_inferred.user.name), 10)) WHERE TO_STRING(user.entity.relationships.owns_inferred.user.name) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.owns_inferred.service.name), 10)) WHERE TO_STRING(user.entity.relationships.owns_inferred.service.name) IS NOT NULL,
 entity.relationships.owns_inferred.ids = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.owns_inferred.entity.id), 10)) WHERE TO_STRING(user.entity.relationships.owns_inferred.entity.id) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.accesses_infrequently.host.id), 10)) WHERE TO_STRING(user.entity.relationships.accesses_infrequently.host.id) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.accesses_infrequently.user.id), 10)) WHERE TO_STRING(user.entity.relationships.accesses_infrequently.user.id) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.accesses_infrequently.user.email), 10)) WHERE TO_STRING(user.entity.relationships.accesses_infrequently.user.email) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.accesses_infrequently.host.name), 10)) WHERE TO_STRING(user.entity.relationships.accesses_infrequently.host.name) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.accesses_infrequently.user.name), 10)) WHERE TO_STRING(user.entity.relationships.accesses_infrequently.user.name) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.accesses_infrequently.service.name), 10)) WHERE TO_STRING(user.entity.relationships.accesses_infrequently.service.name) IS NOT NULL,
 entity.relationships.accesses_infrequently.ids = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.accesses_infrequently.entity.id), 10)) WHERE TO_STRING(user.entity.relationships.accesses_infrequently.entity.id) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.accesses_frequently.host.id), 10)) WHERE TO_STRING(user.entity.relationships.accesses_frequently.host.id) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.accesses_frequently.user.id), 10)) WHERE TO_STRING(user.entity.relationships.accesses_frequently.user.id) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.accesses_frequently.user.email), 10)) WHERE TO_STRING(user.entity.relationships.accesses_frequently.user.email) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.accesses_frequently.host.name), 10)) WHERE TO_STRING(user.entity.relationships.accesses_frequently.host.name) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.accesses_frequently.user.name), 10)) WHERE TO_STRING(user.entity.relationships.accesses_frequently.user.name) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.accesses_frequently.service.name), 10)) WHERE TO_STRING(user.entity.relationships.accesses_frequently.service.name) IS NOT NULL,
 entity.relationships.accesses_frequently.ids = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.accesses_frequently.entity.id), 10)) WHERE TO_STRING(user.entity.relationships.accesses_frequently.entity.id) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.owns.host.id), 10)) WHERE TO_STRING(user.entity.relationships.owns.host.id) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.owns.user.id), 10)) WHERE TO_STRING(user.entity.relationships.owns.user.id) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.owns.user.email), 10)) WHERE TO_STRING(user.entity.relationships.owns.user.email) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.owns.host.name), 10)) WHERE TO_STRING(user.entity.relationships.owns.host.name) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.owns.user.name), 10)) WHERE TO_STRING(user.entity.relationships.owns.user.name) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.owns.service.name), 10)) WHERE TO_STRING(user.entity.relationships.owns.service.name) IS NOT NULL,
 entity.relationships.owns.ids = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.owns.entity.id), 10)) WHERE TO_STRING(user.entity.relationships.owns.entity.id) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.supervises.host.id), 10)) WHERE TO_STRING(user.entity.relationships.supervises.host.id) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.supervises.user.id), 10)) WHERE TO_STRING(user.entity.relationships.supervises.user.id) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.supervises.user.email), 10)) WHERE TO_STRING(user.entity.relationships.supervises.user.email) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.supervises.host.name), 10)) WHERE TO_STRING(user.entity.relationships.supervises.host.name) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.supervises.user.name), 10)) WHERE TO_STRING(user.entity.relationships.supervises.user.name) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.supervises.service.name), 10)) WHERE TO_STRING(user.entity.relationships.supervises.service.name) IS NOT NULL,
 entity.relationships.supervises.ids = MV_DEDUPE(TOP(TO_STRING(user.entity.relationships.supervises.entity.id), 10)) WHERE TO_STRING(user.entity.relationships.supervises.entity.id) IS NOT NULL,
 entity.relationships.resolution.resolved_to = LAST(TO_STRING(user.entity.relationships.resolution.resolved_to), @timestamp) WHERE TO_STRING(user.entity.relationships.resolution.resolved_to) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_level = LAST(TO_STRING(user.entity.relationships.resolution.risk.calculated_level), @timestamp) WHERE TO_STRING(user.entity.relationships.resolution.risk.calculated_level) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_score = LAST(TO_DOUBLE(user.entity.relationships.resolution.risk.calculated_score), @timestamp) WHERE TO_DOUBLE(user.entity.relationships.resolution.risk.calculated_score) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_score_norm = LAST(TO_DOUBLE(user.entity.relationships.resolution.risk.calculated_score_norm), @timestamp) WHERE TO_DOUBLE(user.entity.relationships.resolution.risk.calculated_score_norm) IS NOT NULL,
 host.entity.id = MV_DEDUPE(TOP(TO_STRING(host.entity.id), 10)) WHERE TO_STRING(host.entity.id) IS NOT NULL,
 host.id = MV_DEDUPE(TOP(TO_STRING(host.id), 10)) WHERE TO_STRING(host.id) IS NOT NULL,
 host.name = LAST(TO_STRING(host.name), @timestamp) WHERE TO_STRING(host.name) IS NOT NULL
    BY entity.id
| EVAL entity.name = CASE((COALESCE(\`entity.namespace\` == \\"local\\", FALSE) AND NOT(\`host.name\` IS NULL) AND COALESCE(\`host.name\` != \\"\\", TRUE)), CONCAT(TO_STRING(user.name), \\"@\\", TO_STRING(host.name)), entity.name)
| EVAL entity.name = CASE((COALESCE(\`entity.namespace\` == \\"local\\", FALSE) AND NOT (NOT(\`host.name\` IS NULL) AND COALESCE(\`host.name\` != \\"\\", TRUE))), TO_STRING(user.name), entity.name)
| EVAL entity.name = CASE((COALESCE(\`entity.namespace\` != \\"local\\", TRUE)), TO_STRING(user.name), entity.name),
    entity.confidence = CASE((COALESCE(\`entity.namespace\` != \\"local\\", TRUE)), \\"high\\", entity.confidence)
| EVAL entity.confidence = CASE((COALESCE(\`entity.namespace\` == \\"local\\", FALSE)), \\"medium\\", entity.confidence)
| KEEP entity*,
event*,
user*,
asset*,
data_stream*,
host*,
@timestamp
| SORT entity.EngineMetadata.FirstSeenLogInPage ASC, entity.id ASC
| WHERE entity.EngineMetadata.FirstSeenLogInPage > TO_DATETIME(\\"2022-01-01T12:00:00.000Z\\") 
            OR (entity.EngineMetadata.FirstSeenLogInPage == TO_DATETIME(\\"2022-01-01T12:00:00.000Z\\") 
                AND entity.id > \\"cursor-id\\")
| LIMIT 10000"
`;

exports[`buildCcsLogsExtractionEsqlQuery generates query for generic entity type 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM remote_cluster:logs-*
    METADATA _index, _id
  | WHERE
      @timestamp >= TO_DATETIME(\\"2022-01-01T00:00:00.000Z\\")
      AND @timestamp <= TO_DATETIME(\\"2022-01-01T23:59:59.999Z\\")
      AND ((entity.id IS NOT NULL AND entity.id != \\"\\"))
| EVAL _src_entity_source0 = MV_FIRST(event.module),
 _src_entity_source1 = MV_FIRST(event.dataset),
 _src_entity_source2 = MV_FIRST(data_stream.dataset),
 _src_entity_source = CASE((_src_entity_source0 IS NOT NULL AND _src_entity_source0 != \\"\\"), _src_entity_source0, (_src_entity_source1 IS NOT NULL AND _src_entity_source1 != \\"\\"), _src_entity_source1, (_src_entity_source2 IS NOT NULL AND _src_entity_source2 != \\"\\"), _src_entity_source2, NULL),
 entity.source = CASE((_src_entity_source IS NULL OR _src_entity_source == \\"\\"), NULL, _src_entity_source)
| EVAL entity.id = entity.id
| STATS
    @timestamp = MAX(@timestamp),
    entity.EngineMetadata.FirstSeenLogInPage = MIN(@timestamp),
    entity.id = LAST(TO_STRING(entity.id), @timestamp) WHERE TO_STRING(entity.id) IS NOT NULL,
 entity.name = LAST(TO_STRING(entity.name), @timestamp) WHERE TO_STRING(entity.name) IS NOT NULL,
 event.module = MV_DEDUPE(TOP(TO_STRING(event.module), 10)) WHERE TO_STRING(event.module) IS NOT NULL,
 event.dataset = MV_DEDUPE(TOP(TO_STRING(event.dataset), 10)) WHERE TO_STRING(event.dataset) IS NOT NULL,
 data_stream.dataset = MV_DEDUPE(TOP(TO_STRING(data_stream.dataset), 50)) WHERE TO_STRING(data_stream.dataset) IS NOT NULL,
 entity.source = MV_DEDUPE(TOP(TO_STRING(entity.source), 50)) WHERE TO_STRING(entity.source) IS NOT NULL,
 entity.type = LAST(TO_STRING(entity.type), @timestamp) WHERE TO_STRING(entity.type) IS NOT NULL,
 entity.sub_type = LAST(TO_STRING(entity.sub_type), @timestamp) WHERE TO_STRING(entity.sub_type) IS NOT NULL,
 entity.url = LAST(TO_STRING(entity.url), @timestamp) WHERE TO_STRING(entity.url) IS NOT NULL,
 entity.attributes.watchlists = MV_DEDUPE(TOP(TO_STRING(entity.attributes.watchlists), 10)) WHERE TO_STRING(entity.attributes.watchlists) IS NOT NULL,
 entity.attributes.asset = LAST(TO_BOOLEAN(entity.attributes.asset), @timestamp) WHERE TO_BOOLEAN(entity.attributes.asset) IS NOT NULL,
 entity.attributes.managed = LAST(TO_BOOLEAN(entity.attributes.managed), @timestamp) WHERE TO_BOOLEAN(entity.attributes.managed) IS NOT NULL,
 entity.attributes.mfa_enabled = LAST(TO_BOOLEAN(entity.attributes.mfa_enabled), @timestamp) WHERE TO_BOOLEAN(entity.attributes.mfa_enabled) IS NOT NULL,
 entity.attributes.storage_class = LAST(TO_STRING(entity.attributes.storage_class), @timestamp) WHERE TO_STRING(entity.attributes.storage_class) IS NOT NULL,
 entity.attributes.permissions = MV_DEDUPE(TOP(TO_STRING(entity.attributes.permissions), 10)) WHERE TO_STRING(entity.attributes.permissions) IS NOT NULL,
 entity.attributes.known_redirects = MV_DEDUPE(TOP(TO_STRING(entity.attributes.known_redirects), 10)) WHERE TO_STRING(entity.attributes.known_redirects) IS NOT NULL,
 entity.attributes.oauth_consent_restriction = LAST(TO_STRING(entity.attributes.oauth_consent_restriction), @timestamp) WHERE TO_STRING(entity.attributes.oauth_consent_restriction) IS NOT NULL,
 entity.lifecycle.first_seen = FIRST(TO_DATETIME(@timestamp), @timestamp) WHERE TO_DATETIME(@timestamp) IS NOT NULL,
 entity.lifecycle.last_seen = LAST(TO_DATETIME(@timestamp), @timestamp) WHERE TO_DATETIME(@timestamp) IS NOT NULL,
 entity.lifecycle.last_activity = LAST(TO_DATETIME(entity.lifecycle.last_activity), @timestamp) WHERE TO_DATETIME(entity.lifecycle.last_activity) IS NOT NULL,
 entity.behaviors.rule_names = MV_DEDUPE(TOP(TO_STRING(entity.behaviors.rule_names), 100)) WHERE TO_STRING(entity.behaviors.rule_names) IS NOT NULL,
 entity.behaviors.anomaly_job_ids = MV_DEDUPE(TOP(TO_STRING(entity.behaviors.anomaly_job_ids), 100)) WHERE TO_STRING(entity.behaviors.anomaly_job_ids) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(entity.relationships.administers.host.id), 10)) WHERE TO_STRING(entity.relationships.administers.host.id) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(entity.relationships.administers.user.id), 10)) WHERE TO_STRING(entity.relationships.administers.user.id) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(entity.relationships.administers.user.email), 10)) WHERE TO_STRING(entity.relationships.administers.user.email) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.administers.host.name), 10)) WHERE TO_STRING(entity.relationships.administers.host.name) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.administers.user.name), 10)) WHERE TO_STRING(entity.relationships.administers.user.name) IS NOT NULL,
 entity.relationships.administers.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.administers.service.name), 10)) WHERE TO_STRING(entity.relationships.administers.service.name) IS NOT NULL,
 entity.relationships.administers.ids = MV_DEDUPE(TOP(TO_STRING(entity.relationships.administers.entity.id), 10)) WHERE TO_STRING(entity.relationships.administers.entity.id) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(entity.relationships.communicates_with.host.id), 10)) WHERE TO_STRING(entity.relationships.communicates_with.host.id) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(entity.relationships.communicates_with.user.id), 10)) WHERE TO_STRING(entity.relationships.communicates_with.user.id) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(entity.relationships.communicates_with.user.email), 10)) WHERE TO_STRING(entity.relationships.communicates_with.user.email) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.communicates_with.host.name), 10)) WHERE TO_STRING(entity.relationships.communicates_with.host.name) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.communicates_with.user.name), 10)) WHERE TO_STRING(entity.relationships.communicates_with.user.name) IS NOT NULL,
 entity.relationships.communicates_with.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.communicates_with.service.name), 10)) WHERE TO_STRING(entity.relationships.communicates_with.service.name) IS NOT NULL,
 entity.relationships.communicates_with.ids = MV_DEDUPE(TOP(TO_STRING(entity.relationships.communicates_with.entity.id), 10)) WHERE TO_STRING(entity.relationships.communicates_with.entity.id) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(entity.relationships.depends_on.host.id), 10)) WHERE TO_STRING(entity.relationships.depends_on.host.id) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(entity.relationships.depends_on.user.id), 10)) WHERE TO_STRING(entity.relationships.depends_on.user.id) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(entity.relationships.depends_on.user.email), 10)) WHERE TO_STRING(entity.relationships.depends_on.user.email) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.depends_on.host.name), 10)) WHERE TO_STRING(entity.relationships.depends_on.host.name) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.depends_on.user.name), 10)) WHERE TO_STRING(entity.relationships.depends_on.user.name) IS NOT NULL,
 entity.relationships.depends_on.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.depends_on.service.name), 10)) WHERE TO_STRING(entity.relationships.depends_on.service.name) IS NOT NULL,
 entity.relationships.depends_on.ids = MV_DEDUPE(TOP(TO_STRING(entity.relationships.depends_on.entity.id), 10)) WHERE TO_STRING(entity.relationships.depends_on.entity.id) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(entity.relationships.owns_inferred.host.id), 10)) WHERE TO_STRING(entity.relationships.owns_inferred.host.id) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(entity.relationships.owns_inferred.user.id), 10)) WHERE TO_STRING(entity.relationships.owns_inferred.user.id) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(entity.relationships.owns_inferred.user.email), 10)) WHERE TO_STRING(entity.relationships.owns_inferred.user.email) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.owns_inferred.host.name), 10)) WHERE TO_STRING(entity.relationships.owns_inferred.host.name) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.owns_inferred.user.name), 10)) WHERE TO_STRING(entity.relationships.owns_inferred.user.name) IS NOT NULL,
 entity.relationships.owns_inferred.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.owns_inferred.service.name), 10)) WHERE TO_STRING(entity.relationships.owns_inferred.service.name) IS NOT NULL,
 entity.relationships.owns_inferred.ids = MV_DEDUPE(TOP(TO_STRING(entity.relationships.owns_inferred.entity.id), 10)) WHERE TO_STRING(entity.relationships.owns_inferred.entity.id) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(entity.relationships.accesses_infrequently.host.id), 10)) WHERE TO_STRING(entity.relationships.accesses_infrequently.host.id) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(entity.relationships.accesses_infrequently.user.id), 10)) WHERE TO_STRING(entity.relationships.accesses_infrequently.user.id) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(entity.relationships.accesses_infrequently.user.email), 10)) WHERE TO_STRING(entity.relationships.accesses_infrequently.user.email) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.accesses_infrequently.host.name), 10)) WHERE TO_STRING(entity.relationships.accesses_infrequently.host.name) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.accesses_infrequently.user.name), 10)) WHERE TO_STRING(entity.relationships.accesses_infrequently.user.name) IS NOT NULL,
 entity.relationships.accesses_infrequently.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.accesses_infrequently.service.name), 10)) WHERE TO_STRING(entity.relationships.accesses_infrequently.service.name) IS NOT NULL,
 entity.relationships.accesses_infrequently.ids = MV_DEDUPE(TOP(TO_STRING(entity.relationships.accesses_infrequently.entity.id), 10)) WHERE TO_STRING(entity.relationships.accesses_infrequently.entity.id) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(entity.relationships.accesses_frequently.host.id), 10)) WHERE TO_STRING(entity.relationships.accesses_frequently.host.id) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(entity.relationships.accesses_frequently.user.id), 10)) WHERE TO_STRING(entity.relationships.accesses_frequently.user.id) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(entity.relationships.accesses_frequently.user.email), 10)) WHERE TO_STRING(entity.relationships.accesses_frequently.user.email) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.accesses_frequently.host.name), 10)) WHERE TO_STRING(entity.relationships.accesses_frequently.host.name) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.accesses_frequently.user.name), 10)) WHERE TO_STRING(entity.relationships.accesses_frequently.user.name) IS NOT NULL,
 entity.relationships.accesses_frequently.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.accesses_frequently.service.name), 10)) WHERE TO_STRING(entity.relationships.accesses_frequently.service.name) IS NOT NULL,
 entity.relationships.accesses_frequently.ids = MV_DEDUPE(TOP(TO_STRING(entity.relationships.accesses_frequently.entity.id), 10)) WHERE TO_STRING(entity.relationships.accesses_frequently.entity.id) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(entity.relationships.owns.host.id), 10)) WHERE TO_STRING(entity.relationships.owns.host.id) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(entity.relationships.owns.user.id), 10)) WHERE TO_STRING(entity.relationships.owns.user.id) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(entity.relationships.owns.user.email), 10)) WHERE TO_STRING(entity.relationships.owns.user.email) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.owns.host.name), 10)) WHERE TO_STRING(entity.relationships.owns.host.name) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.owns.user.name), 10)) WHERE TO_STRING(entity.relationships.owns.user.name) IS NOT NULL,
 entity.relationships.owns.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.owns.service.name), 10)) WHERE TO_STRING(entity.relationships.owns.service.name) IS NOT NULL,
 entity.relationships.owns.ids = MV_DEDUPE(TOP(TO_STRING(entity.relationships.owns.entity.id), 10)) WHERE TO_STRING(entity.relationships.owns.entity.id) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.host.id = MV_DEDUPE(TOP(TO_STRING(entity.relationships.supervises.host.id), 10)) WHERE TO_STRING(entity.relationships.supervises.host.id) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.user.id = MV_DEDUPE(TOP(TO_STRING(entity.relationships.supervises.user.id), 10)) WHERE TO_STRING(entity.relationships.supervises.user.id) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.user.email = MV_DEDUPE(TOP(TO_STRING(entity.relationships.supervises.user.email), 10)) WHERE TO_STRING(entity.relationships.supervises.user.email) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.host.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.supervises.host.name), 10)) WHERE TO_STRING(entity.relationships.supervises.host.name) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.user.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.supervises.user.name), 10)) WHERE TO_STRING(entity.relationships.supervises.user.name) IS NOT NULL,
 entity.relationships.supervises.raw_identifiers.service.name = MV_DEDUPE(TOP(TO_STRING(entity.relationships.supervises.service.name), 10)) WHERE TO_STRING(entity.relationships.supervises.service.name) IS NOT NULL,
 entity.relationships.supervises.ids = MV_DEDUPE(TOP(TO_STRING(entity.relationships.supervises.entity.id), 10)) WHERE TO_STRING(entity.relationships.supervises.entity.id) IS NOT NULL,
 entity.relationships.resolution.resolved_to = LAST(TO_STRING(entity.relationships.resolution.resolved_to), @timestamp) WHERE TO_STRING(entity.relationships.resolution.resolved_to) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_level = LAST(TO_STRING(entity.relationships.resolution.risk.calculated_level), @timestamp) WHERE TO_STRING(entity.relationships.resolution.risk.calculated_level) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_score = LAST(TO_DOUBLE(entity.relationships.resolution.risk.calculated_score), @timestamp) WHERE TO_DOUBLE(entity.relationships.resolution.risk.calculated_score) IS NOT NULL,
 entity.relationships.resolution.risk.calculated_score_norm = LAST(TO_DOUBLE(entity.relationships.resolution.risk.calculated_score_norm), @timestamp) WHERE TO_DOUBLE(entity.relationships.resolution.risk.calculated_score_norm) IS NOT NULL,
 cloud.account.id = LAST(TO_STRING(cloud.account.id), @timestamp) WHERE TO_STRING(cloud.account.id) IS NOT NULL,
 cloud.account.name = LAST(TO_STRING(cloud.account.name), @timestamp) WHERE TO_STRING(cloud.account.name) IS NOT NULL,
 cloud.availability_zone = LAST(TO_STRING(cloud.availability_zone), @timestamp) WHERE TO_STRING(cloud.availability_zone) IS NOT NULL,
 cloud.instance.id = LAST(TO_STRING(cloud.instance.id), @timestamp) WHERE TO_STRING(cloud.instance.id) IS NOT NULL,
 cloud.instance.name = LAST(TO_STRING(cloud.instance.name), @timestamp) WHERE TO_STRING(cloud.instance.name) IS NOT NULL,
 cloud.machine.type = LAST(TO_STRING(cloud.machine.type), @timestamp) WHERE TO_STRING(cloud.machine.type) IS NOT NULL,
 cloud.project.id = LAST(TO_STRING(cloud.project.id), @timestamp) WHERE TO_STRING(cloud.project.id) IS NOT NULL,
 cloud.project.name = LAST(TO_STRING(cloud.project.name), @timestamp) WHERE TO_STRING(cloud.project.name) IS NOT NULL,
 cloud.provider = LAST(TO_STRING(cloud.provider), @timestamp) WHERE TO_STRING(cloud.provider) IS NOT NULL,
 cloud.region = LAST(TO_STRING(cloud.region), @timestamp) WHERE TO_STRING(cloud.region) IS NOT NULL,
 cloud.service.name = LAST(TO_STRING(cloud.service.name), @timestamp) WHERE TO_STRING(cloud.service.name) IS NOT NULL,
 orchestrator.api_version = LAST(TO_STRING(orchestrator.api_version), @timestamp) WHERE TO_STRING(orchestrator.api_version) IS NOT NULL,
 orchestrator.cluster.id = LAST(TO_STRING(orchestrator.cluster.id), @timestamp) WHERE TO_STRING(orchestrator.cluster.id) IS NOT NULL,
 orchestrator.cluster.name = LAST(TO_STRING(orchestrator.cluster.name), @timestamp) WHERE TO_STRING(orchestrator.cluster.name) IS NOT NULL,
 orchestrator.cluster.url = LAST(TO_STRING(orchestrator.cluster.url), @timestamp) WHERE TO_STRING(orchestrator.cluster.url) IS NOT NULL,
 orchestrator.cluster.version = LAST(TO_STRING(orchestrator.cluster.version), @timestamp) WHERE TO_STRING(orchestrator.cluster.version) IS NOT NULL,
 orchestrator.namespace = LAST(TO_STRING(orchestrator.namespace), @timestamp) WHERE TO_STRING(orchestrator.namespace) IS NOT NULL,
 orchestrator.organization = LAST(TO_STRING(orchestrator.organization), @timestamp) WHERE TO_STRING(orchestrator.organization) IS NOT NULL,
 orchestrator.resource.annotation = LAST(TO_STRING(orchestrator.resource.annotation), @timestamp) WHERE TO_STRING(orchestrator.resource.annotation) IS NOT NULL,
 orchestrator.resource.id = LAST(TO_STRING(orchestrator.resource.id), @timestamp) WHERE TO_STRING(orchestrator.resource.id) IS NOT NULL,
 orchestrator.resource.ip = LAST(TO_IP(orchestrator.resource.ip), @timestamp) WHERE TO_IP(orchestrator.resource.ip) IS NOT NULL,
 orchestrator.resource.label = LAST(TO_STRING(orchestrator.resource.label), @timestamp) WHERE TO_STRING(orchestrator.resource.label) IS NOT NULL,
 orchestrator.resource.name = LAST(TO_STRING(orchestrator.resource.name), @timestamp) WHERE TO_STRING(orchestrator.resource.name) IS NOT NULL,
 orchestrator.resource.parent.type = LAST(TO_STRING(orchestrator.resource.parent.type), @timestamp) WHERE TO_STRING(orchestrator.resource.parent.type) IS NOT NULL,
 orchestrator.resource.type = LAST(TO_STRING(orchestrator.resource.type), @timestamp) WHERE TO_STRING(orchestrator.resource.type) IS NOT NULL,
 orchestrator.type = LAST(TO_STRING(orchestrator.type), @timestamp) WHERE TO_STRING(orchestrator.type) IS NOT NULL,
 asset.id = LAST(TO_STRING(asset.id), @timestamp) WHERE TO_STRING(asset.id) IS NOT NULL,
 asset.name = LAST(TO_STRING(asset.name), @timestamp) WHERE TO_STRING(asset.name) IS NOT NULL,
 asset.owner = LAST(TO_STRING(asset.owner), @timestamp) WHERE TO_STRING(asset.owner) IS NOT NULL,
 asset.serial_number = LAST(TO_STRING(asset.serial_number), @timestamp) WHERE TO_STRING(asset.serial_number) IS NOT NULL,
 asset.model = LAST(TO_STRING(asset.model), @timestamp) WHERE TO_STRING(asset.model) IS NOT NULL,
 asset.vendor = LAST(TO_STRING(asset.vendor), @timestamp) WHERE TO_STRING(asset.vendor) IS NOT NULL,
 asset.environment = LAST(TO_STRING(asset.environment), @timestamp) WHERE TO_STRING(asset.environment) IS NOT NULL,
 asset.criticality = LAST(TO_STRING(asset.criticality), @timestamp) WHERE TO_STRING(asset.criticality) IS NOT NULL,
 asset.business_unit = LAST(TO_STRING(asset.business_unit), @timestamp) WHERE TO_STRING(asset.business_unit) IS NOT NULL,
 entity.risk.calculated_level = LAST(TO_STRING(entity.risk.calculated_level), @timestamp) WHERE TO_STRING(entity.risk.calculated_level) IS NOT NULL,
 entity.risk.calculated_score = LAST(TO_DOUBLE(entity.risk.calculated_score), @timestamp) WHERE TO_DOUBLE(entity.risk.calculated_score) IS NOT NULL,
 entity.risk.calculated_score_norm = LAST(TO_DOUBLE(entity.risk.calculated_score_norm), @timestamp) WHERE TO_DOUBLE(entity.risk.calculated_score_norm) IS NOT NULL
    BY entity.id
| KEEP entity*,
event*,
data_stream*,
cloud*,
orchestrator*,
asset*,
@timestamp
| SORT entity.EngineMetadata.FirstSeenLogInPage ASC, entity.id ASC
| LIMIT 10000"
`;
